# digital-land-qa-agent

./: .env.example  .gitignore  CLAUDE.md  INTERVIEW.md  Makefile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
config/targets/: _template.yaml  digital-land-python.yaml  pyspark-jobs.yaml
digital_land_qa_agent/: config.py  diff_runner.py
digital_land_qa_agent/agents/: planner.py  test_writer.py
digital_land_qa_agent/prompts/: critic.md  planner.md  test_writer.md
digital_land_qa_agent/tools/: runners.py
examples/: pyspark-jobs-qa-agent.yml
src/digital_land_qa_agent/: __init__.py  __main__.py  config.py  metrics.py  orchestrator.py  runs.py
src/digital_land_qa_agent/agents/: __init__.py  base.py  critic.py  profiler.py
src/digital_land_qa_agent/llm/: __init__.py  client.py  fixtures.py  mock.py
src/digital_land_qa_agent/prompts/: profiler.md
src/digital_land_qa_agent/tools/: __init__.py  fs.py  registry.py  runners.py
tests/: test_diff_runner.py  test_metrics.py  test_pipeline.py  test_runners.py  test_runs.py  test_tools.py
