[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-land-qa-agent"
version = "0.1.0"
description = "Multi-agent QA automation framework for digital-land repos. Demonstrates agentic AI patterns: task decomposition, tool use, evaluation, and human-in-the-loop."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QA Agent Author"}]
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",          # framework's own lint
]
# Optional target-specific linters. Install whichever the target you run
# against uses (the Critic shells out to whatever ``lint_commands`` declares
# in config/targets/<name>.yaml). Included here so the pyspark-jobs demo
# works end-to-end out of the box.
targets-python = [
    "black>=24.0",
    "flake8>=6.0",
    "isort>=5.0",
]

[project.scripts]
dl-qa = "digital_land_qa_agent.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
